added dummy template for testing purposes - this branch should be deleted after feature development done

--- a/templates.yml
+++ b/templates.yml
@@ -98,4 +98,9 @@ templates:
         family_name :
       description : TOSCA based template for resource shell
       repository : https://github.com/QualiSystems/shellfoundry-tosca-resource-template
-
+    - name : tosca/resource/vido
+      params:
+        project_name :
+        family_name :
+      description : TOSCA based template for resource shell
+      repository : https://github.com/johnathanvidu/shellfoundry-tosca-networking-template
